--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>YugoTiers OS</title>
+      <title>YugoTiers OP</title>
             <style>
                 body {
                     background-color: gray;
